# cpputils

./: CMakeLists.txt  README.md
inc/: utils_am.h  utils_cc.h  utils_factory.h  utils_manager.h  utils_table.h  utils_tuple.h
src/: utils_am.cpp  utils_cc.cpp
test/: CMakeLists.txt  test_am.cpp  test_cc.cpp  test_factory.cpp  test_table.cpp  test_tuple.cpp
